src/test/deca/context/invalid/provided/testi31.deca
class A{
    protected int x;
}
class B{
    int getX(){
        A a = new A();
        return a.x;
    }
}